material you settings

--- a/src/app/core/ui/src/main/res/values/strings.xml
+++ b/src/app/core/ui/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">TrackR</string>
     <string name="overview">Overview</string>
     <string name="transactions">Transactions</string>
+
+    <!--Settings-->
     <string name="settings">Settings</string>
+    <string name="material_you_title">Material You</string>
+    <string name="material_you_message">Theme the app based on your wallpaper</string>
 </resources>
