--- a/src/app/core/ui/src/main/res/values/strings.xml
+++ b/src/app/core/ui/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="settings">Settings</string>
     <string name="material_you_title">Material You</string>
     <string name="material_you_message">Theme the app based on your wallpaper</string>
+    <string name="currency">Currency</string>
 </resources>
