--- a/src/app/core/ui/src/main/res/values/strings.xml
+++ b/src/app/core/ui/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <string name="overview">Overview</string>
     <string name="transactions">Transactions</string>
 
+    <!--Overview-->
+    <string name="budget">Budget</string>
+    <string name="expenses">Expenses</string>
+
     <!--Settings-->
     <string name="settings">Settings</string>
     <string name="material_you_title">Material You</string>
