--- a/src/app/core/ui/src/main/res/values/strings.xml
+++ b/src/app/core/ui/src/main/res/values/strings.xml
@@ -6,10 +6,20 @@
     <!--Overview-->
     <string name="budget">Budget</string>
     <string name="expenses">Expenses</string>
+    <string name="add_expense">Add Expense</string>
+    <string name="no_transactions">Hmm, it looks kind of empty, start by logging some transactions.</string>
 
     <!--Settings-->
     <string name="settings">Settings</string>
     <string name="material_you_title">Material You</string>
     <string name="material_you_message">Theme the app based on your wallpaper</string>
     <string name="currency">Currency</string>
+
+    <!--Month Picker-->
+    <string name="choose_a_month">Choose a month</string>
+    <string name="choose_a_year">Choose a year</string>
+
+    <!--General-->
+    <string name="confirm">Confirm</string>
+    <string name="dismiss">Dismiss</string>
 </resources>
